# skim

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: bump.yml  release.yml
docs/: design.md  prd.md  tech-design.md  user-stories.md
logos/: preview.html
logos/concepts-v3/: preview.html
logos/concepts-v3/C-refine/: preview.html
packaging/homebrew-cask/: skim-skills.rb
prototypes/: d-codex-native.html
scripts/: release.sh
src/: App.tsx  main.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  safety.rs
src-tauri/src/commands/: read.rs  write.rs
src/components/: ArchiveView.tsx  ConfirmDialog.tsx  DetailDrawer.tsx  SettingsView.tsx  Sidebar.tsx  SkillRow.tsx  SkillsView.tsx  StatusControl.tsx  UpdateBanner.tsx  ui.tsx
src/domain/: diff-config.ts  discover-projects.ts  parse-skill.ts  plan-ops.ts  resolve-state.bench.ts  resolve-state.ts  types.ts
src/domain/__tests__/: diff-config.test.ts  discover-projects.test.ts  parse-skill.test.ts  plan-ops.test.ts  resolve-state.test.ts
src/i18n/: en.json  index.ts  zh-CN.json
src/io/: execute.ts  refresh.ts  tauri.ts  updater.ts
src/io/__tests__/: r3-claude-rehearsal.test.ts
