[package]
name = "skim"
version = "0.2.22"
description = "Cross-agent local AI skills manager"
edition = "2021"

[lib]
name = "skim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
trash = "5"
tempfile = "3"
sha2 = "0.10"
thiserror = "2"
walkdir = "2"
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
